--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,27 @@
+certifi==2018.1.18
 cffi==1.11.2
-Flask==0.12.2
+chardet==3.0.4
+click==6.7
 cycler==0.10.0
-matplotlib==2.1.1
+DateTime==4.2
+dominate==2.3.1
+Flask==0.12.2
 Flask-Bootstrap==3.3.7.1
+idna==2.5
+itsdangerous==0.24
+Jinja2==2.10
+MarkupSafe==1.0
+matplotlib==2.1.1
 numpy==1.13.3
 pandas==0.21.1
+pycparser==2.18
 pyparsing==2.2.0
 python-dateutil==2.6.1
 pytz==2017.3
 requests==2.18.1
 six==1.11.0
 SQLAlchemy==1.1.15
+urllib3==1.21.1
+visitor==0.1.3
+Werkzeug==0.14.1
+zope.interface==4.4.3
