--- a/requirements.txt
+++ b/requirements.txt
@@ -13,14 +13,15 @@ Jinja2==2.10
 MarkupSafe==1.0
 matplotlib==2.1.1
 numpy==1.13.3
-pandas==0.22.0
+pandas==0.21.1
 pycparser==2.18
 pyparsing==2.2.0
 python-dateutil==2.6.1
 pytz==2017.3
+raven==6.6.0
 requests==2.18.1
 six==1.11.0
-SQLAlchemy==1.2.3
+SQLAlchemy==1.1.15
 urllib3==1.21.1
 visitor==0.1.3
 Werkzeug==0.14.1
